T130 Previously cached setproctitle test (failed) was disabling the more comprehensive tests that followed much later.

--- a/configure.ac
+++ b/configure.ac
@@ -280,12 +280,15 @@ AC_SEARCH_LIBS([fdatasync],[rt],[
 	])
 ])
 
+dnl Unset casched result so we can do a more comprehensive test.
+AS_UNSET([ac_cv_func_setproctitle])
+spt_type=SPT_NONE
 AC_CHECK_FUNC([setproctitle],[
 	spt_type=SPT_BUILTIN
 ],[
 	AC_CHECK_LIB([util],[setproctitle],[
 		spt_type=SPT_BUILTIN
-		LIBS="$LIBS -lutil"
+		SNERT_JOIN_UNIQ([LIBS],[-lutil])
 	],[
 		AC_CHECK_HEADERS([sys/pstat.h],[spt_type=SPT_PSTAT])
 		AC_CHECK_HEADERS([sys/sysnews.h],[spt_type=SPT_SYSMIPS])
